Did a grammar correction

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -186,7 +186,7 @@ slight delay. This delay will be small (a few nanoseconds long) but will accumul
 a decrease in accuracy is that the receiver may get a time on the clock which is off the actual time on the satellites clock. This can lead to
 a slight change of position. This form of error is common with most GPS signals. A typical GPS Receiver can also be a cause for this problem as it 
 has a crystal clock which is not as precise than the cesium atomic clocks on the satellites \citep{Rabbany2006, Kleusberg1990}. While this
-form of error is a common cause of problem with GPS accuracy, there isn't a lot of game opportunities due to the fact that the player
+form of error is a common cause of problem with GPS accuracy, there aren't a lot of game opportunities due to the fact that the player
 can't really control when a clock error is to happen.
 
 \subsection{GPS Signal Reception}
