--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -304,8 +304,22 @@ class where they are sent to the server.
 \subsection{Server}
 
 
-
 \subsection{Client Server Communication}
+\label{communication}
+Since a lot of the game will have a lot of multiplayer features, it was important that the network side of the game
+was robust to ensure that no player would have an unfair advantage when playing the game. Table \ref{tab:webSocketComms}
+sets out the different communication types that are required to make this game.
+
+\begin{table}[]
+    \begin{tabular}{|l|l|}
+    \hline
+    \rowcolor[HTML]{9B9B9B} 
+    \multicolumn{1}{|c|}{\textbf{Communication Type}} & \multicolumn{1}{c|}{\textbf{Method and Purpose}}                                             \\ \hline
+    CONNECT               & Gives the user their id and their initial player type                                                                \\ \hline
+    NEW\_TYPE             & This is triggered if either a new user connects to the server or if a user is caught. This will change the users typ \\ \hline
+                          &                                                                                                                      \\ \hline
+    \end{tabular}
+    \end{table}
 
 \section{Mechanics}
 In this section I go over the various mechanics that I have designed for the game
