--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -311,14 +311,16 @@ was robust to ensure that no player would have an unfair advantage when playing 
 sets out the different communication types that are required to make this game.
 
 \begin{table}[]
-    \begin{tabular}{|l|l|}
+    \caption{The different communication types to the server  }\label{tab:webSocketComms}
+    \resizebox{\textwidth}{!}{\begin{tabular}{|l|l|}
     \hline
     \rowcolor[HTML]{9B9B9B} 
     \multicolumn{1}{|c|}{\textbf{Communication Type}} & \multicolumn{1}{c|}{\textbf{Method and Purpose}}                                             \\ \hline
     CONNECT               & Gives the user their id and their initial player type                                                                \\ \hline
-    NEW\_TYPE             & This is triggered if either a new user connects to the server or if a user is caught. This will change the users typ \\ \hline
+    NEW\_TYPE             & This is triggered if either a new user connects to the server or if a user is caught. This will change the users type \\ \hline
                           &                                                                                                                      \\ \hline
-    \end{tabular}
+    \end{tabular}}
+    
     \end{table}
 
 \section{Mechanics}
