Created a first draft for the overview

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -564,7 +564,7 @@ with the second phase set to be done in the week commencing the 6th February 202
 For Phase 1 I managed to test the game with 8 participants with a total of 6 games played. Games were either played between me and the participant
 or between the two participants. Most of the games went well with the exception of two games where the ranges in errors were higher than my threshold
 (I will go into more detail in subsection \ref{phase1errorrange}). I was glad to see that there were no problems with overall connectivity throughout
-the duration of the game
+the duration of the game and that the play tests had an overall positive reception.
 
 \subsection{Strategies}
 
