Added two new paragraphs for the survey results

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -556,9 +556,10 @@ games that were played around the main building, the cloisters and the surroundi
 of the players, their GPS Error and the locations where the players were caught. I also noted down the brand and the model of the phone to analyse
 how the game worked with different phones. After playing the game, I would ask my participants to fill in a survey with questions including how
 fun the game was to play, whether the connection was stable and what improvements could be made in future iterations. I plan to do two phases
-with the second phase set to be done in the week commencing the 6th February 2023.
+with the second phase set to be done in the week commencing the 6th February 2023 (Please refer to \ref{phase1survey} for more details).
 
 \section{Results from Phase 1}
+\label{phase1}
 
 \subsection{Overview}
 For Phase 1 I managed to test the game with 8 participants with a total of 6 games played. Games were either played between me and the participant
@@ -590,6 +591,7 @@ for a single phone type. The main conclusion that I decided to make is that I ne
 The best way to do this is to consider the median value or the lowest value and then adjust my ranges based on that value.  
 
 \subsection{The Catching Mechanic}
+\label{phase1catching}
 Another major thing that I wanted to was see whether the catching mechanic (Please see section \ref{catching} for more details on how this works)
 was working as intended. I feel that this part of the evaluation had some mixed results. The problems mentioned in section
 \ref{phase1errorrange} caused problems to this part of the game as well. Mainly because I had implemented it so that if the
@@ -607,6 +609,21 @@ I found the runner in a shadow area and I couldn't catch them until we moved int
 
 
 \subsection{Survey Results}
+\label{phase1survey}
+The main aim for the survey at the end of the evaluation was to get a more opinionated view of how the participants
+thought the game went and what improvements they would make. I started by giving them a set of statements and asked
+them if they agreed or disagreed with the statements. Table \ref{tab:agree} shows the breakdown of the participents'
+responses.
+
+Table \ref{tab:agree} suggests that the overall reaction to the game was positive. For example all 8 participants started
+that they enjoyed the game with 3 out of 8 people saying that they really enjoyed it. The survey suggested that the experience
+playing the game helped them get a better understanding about how the accuracy of their GPS coordinates can change due to different
+factors such as hiding in buildings and under bridges. This had an even stronger response with three quarters of the participants
+stating that they strongly agreed that the game educated them on GPS accuracy. However, the last two questions which were
+about the game connection and the user interface had a more mixed response. The User Interface had 4 people who had a Neutral
+opinion. This was mainly due to the fact that each player had a marker which was the same colour. The connection question
+was the only question which had people who said that they disagreed with the statement. This was mainly due to the problems discussed
+in sections \ref{phase1errorrange} and \ref{phase1catching}.
 
 \begin{table}[]
     \centering
