Found a way to change the colour of the markers. Next step is to make a colour randomizer

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -566,7 +566,10 @@ or between the two participants. Most of the games went well with the exception 
 the duration of the game and that the play tests had an overall positive reception.
 
 \subsection{Strategies}
-
+An interesting thing that came out of this evaluation is the different strategies that some participants made while playing the game. At the beginning
+of every game I explained to the participants where some of the best locations to find a GPS shadow would be. With this knowledge most participants
+went under the cloisters however one person had a better strategy. They managed to find a route through the University Chapel to the opposite
+quadrangle without being detected.
 
 \subsection{Error Ranges}
 \label{phase1errorrange}
