Added a section on my phase 2 catching mechanic

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -87,6 +87,15 @@
    year = {2020},
 }
 
+@article{uberGPS,
+   author = {Danny Iland and Andrew Irish and Brian Sandler},
+   year = {2018},
+   title = {Rethinking GPS: Engineering Next-Gen Location at Uber},
+   url = {https://www.uber.com/en-SE/blog/rethinking-gps/},
+   publisher = {Uber},
+   journal = {Uber Engineering Blog}
+}
+
 @inbook{Oxley2017,
    author = {Alan Oxley},
    doi = {10.1016/B978-0-12-809594-2.00008-3},
