Added a Technologies Used section in the implementation part of the disseratation

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -61,6 +61,14 @@
        year={2022}
 }
 
+@misc{djangoDatabases,
+      title={{Databases}},
+      author={{Django Software Foundation}},
+      year={2023},
+      url={https://docs.djangoproject.com/en/4.1/ref/databases/},
+      urldate={2023-02-07}
+}
+
 @film{Chase2022,
    author = {Adam Chase and Sam Denby and Ben Doyle},
    month = {9},
@@ -90,7 +98,7 @@
 @article{uberGPS,
    author = {Danny Iland and Andrew Irish and Brian Sandler},
    year = {2018},
-   title = {Rethinking GPS: Engineering Next-Gen Location at Uber},
+   title = {Rethinking {GPS}: Engineering {N}ext-{G}en {L}ocation at {U}ber},
    url = {https://www.uber.com/en-SE/blog/rethinking-gps/},
    publisher = {Uber},
    journal = {Uber Engineering Blog}
