Added a database paragraph to the implementation section of the dissertation

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -101,7 +101,8 @@
    title = {Rethinking {GPS}: Engineering {N}ext-{G}en {L}ocation at {U}ber},
    url = {https://www.uber.com/en-SE/blog/rethinking-gps/},
    publisher = {Uber},
-   journal = {Uber Engineering Blog}
+   journal = {Uber Engineering Blog},
+   urldate={2023-02-06}
 }
 
 @inbook{Oxley2017,
@@ -155,4 +156,28 @@
    title = {Indoor Positioning Using GPS Revisited},
    publisher = {Springer},
    year = {2010},
+}
+
+@misc{postgis,
+   author={{PostGIS}},
+   title={PostGIS},
+   year={2023},
+   url={https://postgis.net/}
+   urldate={2023-02-07}
+}
+
+@misc{postgres,
+   author={{PostgreSQL Global Development Group}},
+   title={{PostGreSQL}},
+   year={2023},
+   url={https://www.postgresql.org/},
+   urldate={2023-02-07}
+}
+
+@misc{mongodb,
+   author={{MongoDB, Inc}},
+   title={MongoDB},
+   year={2023},
+   url={https://www.mongodb.com/},
+   urldate={2023-02-07}
 }
